--- a/app/src/main/res/drawable/bg_distance_text.xml
+++ b/app/src/main/res/drawable/bg_distance_text.xml
@@ -1,8 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@android:color/white" />
-    <corners android:radius="40dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- Bottom 2dp Shadow -->
+    <item>
+        <shape android:shape="rectangle">
+
+            <solid android:color="#6000" />
+            <corners android:radius="40dp" />
+
+        </shape>
+    </item>
+
+    <!-- White Top color -->
+    <item android:bottom="1px"
+        android:right="1dp">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="@android:color/white" />
+            <corners android:radius="40dp" />
+        </shape>
+
+    </item>
+
+
+</layer-list>
 
