--- a/app/src/main/res/values/styles_views.xml
+++ b/app/src/main/res/values/styles_views.xml
@@ -17,6 +17,9 @@
     <style name="SeparatorHorizontal.Grey">
         <item name="android:background">#ccc</item>
     </style>
+    <style name="SeparatorHorizontal.White">
+        <item name="android:background">#fff</item>
+    </style>
 
     <style name="SeparatorVertical.Grey">
         <item name="android:background">#ccc</item>
