--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,7 @@
     <color name="green_gradient_light">#EBF49D</color>
     <color name="transblack_entities">#9000</color>
     <color name="white">#FFF</color>
+    <color name="orange">#e78f00</color>
+    <color name="grey">#807f7f</color>
 
 </resources>
