--- a/app/src/main/res/drawable/bg_button_green.xml
+++ b/app/src/main/res/drawable/bg_button_green.xml
@@ -13,7 +13,7 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/purple_dark" />
+            <solid android:color="@color/green_dark" />
             <!--<solid android:color="@android:color/transparent" />-->
             <corners android:radius="25dp" />
         </shape>
@@ -21,7 +21,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/purple" />
+            <solid android:color="@color/green" />
             <corners android:radius="25dp" />
         </shape>
 
