--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green_light">
+    android:background="@drawable/green_gradient">
 
 
     <LinearLayout
@@ -24,6 +24,7 @@
             android:src="@mipmap/img_mes_header"/>
 
         <EditText
+            android:id="@+id/edit_username"
             style="@style/TextBase"
             android:layout_width="match_parent"
             android:hint="@string/username"
@@ -32,6 +33,7 @@
 
 
         <EditText
+            android:id="@+id/edit_password"
             style="@style/TextBase"
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
@@ -39,21 +41,18 @@
             android:inputType="textPassword" />
 
         <Button
-            style="@style/TextBase"
-            android:layout_width="match_parent"
+            android:id="@+id/btn_login"
+            style="@style/ButtonMes"
             android:layout_marginTop="20dp"
-            android:background="@drawable/bg_button_purple"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="@string/enter"
-            android:textColor="@color/green"
-            android:textSize="20sp" />
+            android:text="@string/enter" />
 
         <TextView
+            android:id="@+id/btn_remember_password"
             style="@style/TextBase"
             android:layout_gravity="right"
             android:layout_marginTop="30dp"
-            android:text="@string/remember_password" />
+            android:text="@string/remember_password"
+            android:padding="8dp"/>
 
     </LinearLayout>
 </RelativeLayout>
