--- a/app/src/main/res/layout/fragment_payment_step2.xml
+++ b/app/src/main/res/layout/fragment_payment_step2.xml
@@ -63,8 +63,7 @@
             <TextView
                 android:id="@+id/tv_max_accepted_entity"
                 style="@style/TextBase.Purple"
-                android:layout_marginTop="5dp"
-                android:text="@string/max_boniatos_accepted_by_entity" />
+                android:layout_marginTop="5dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
