--- a/app/src/main/res/layout/view_header_menu.xml
+++ b/app/src/main/res/layout/view_header_menu.xml
@@ -24,13 +24,15 @@
             android:id="@+id/btn_login"
             android:text="@string/enter"
             android:layout_marginLeft="10dp"
-            style="@style/ButtonMes" />
+            style="@style/ButtonMes"
+            android:minWidth="0dp"/>
 
         <TextView
             android:id="@+id/btn_singup"
             style="@style/ButtonMes"
             android:text="@string/register"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginLeft="5dp"
+            android:minWidth="0dp"/>
 
     </LinearLayout>
 
