--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
     </style>
 
     <style name="ButtonMes.Green">
-        <item name="backgroundTint">@color/green</item>
+        <item name="android:background">@drawable/bg_button_green</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
