--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="net.mercadosocial.moneda.ui.MainActivity">
+    tools:context="net.mercadosocial.moneda.ui.main.MainActivity">
 
     <include layout="@layout/toolbar" />
 
