--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -3,21 +3,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/green_gradient"
-    android:gravity="center_horizontal"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context="net.mercadosocial.moneda.ui.wallet.WalletFragment">
 
+    <LinearLayout
+        android:id="@+id/view_no_wallet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@mipmap/ic_intro_4" />
+
+        <TextView
+            style="@style/TextBase"
+            android:gravity="center_horizontal"
+            android:padding="30dp"
+            android:text="@string/register_to_use_wallet_text" />
+
+        <LinearLayout
+            android:id="@+id/view_enter_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/btn_login"
+                style="@style/ButtonMes"
+                android:minWidth="0dp"
+                android:padding="10dp"
+                android:text="@string/enter" />
+
+            <TextView
+                android:id="@+id/btn_singup"
+                style="@style/ButtonMes"
+                android:layout_marginLeft="15dp"
+                android:minWidth="0dp"
+                android:padding="10dp"
+                android:text="@string/register" />
+        </LinearLayout>
+    </LinearLayout>
+
     <ScrollView
+        android:id="@+id/view_wallet"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="10dp"
-            android:paddingBottom="15dp">
+            android:paddingBottom="15dp"
+            android:paddingTop="10dp">
 
 
             <TextView
@@ -25,7 +70,6 @@
                 style="@style/TextBase.Purple"
                 android:layout_marginBottom="10dp"
                 android:gravity="center_horizontal"
-                android:text="¡Hola Traficantes de Sueños!"
                 android:textSize="24sp" />
 
             <LinearLayout
@@ -40,11 +84,27 @@
                     style="@style/TextBase.Purple"
                     android:text="@string/your_balance_is" />
 
-                <TextView
-                    android:id="@+id/tv_balance"
-                    style="@style/TextBase"
-                    android:layout_marginLeft="10dp"
-                    android:text="20 B" />
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+
+                    <ProgressBar
+                        android:id="@+id/progress_balance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/tv_balance"
+                        android:layout_alignBottom="@+id/tv_balance"
+                        android:indeterminate="true"
+                        android:visibility="gone"/>
+
+                    <TextView
+                        android:id="@+id/tv_balance"
+                        style="@style/TextBase"
+                        android:layout_marginLeft="10dp"
+                        android:text="20.00 B"
+                        android:padding="3dp"/>
+                </RelativeLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -55,28 +115,56 @@
                 android:background="@color/green_gradient_light"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="15dp">
+                android:padding="15dp"
+                android:visibility="gone">
 
                 <TextView
                     style="@style/TextBase"
                     android:text="@string/pending_payments_warning"
                     android:textColor="@color/orange"
-                    android:textStyle="bold" />
+                    android:textSize="17sp"
+                    android:textStyle="bold"/>
 
 
             </LinearLayout>
 
-            <View style="@style/SeparatorHorizontal.White"
+            <View
+                style="@style/SeparatorHorizontal.White"
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="15dp" />
 
             <TextView
                 style="@style/TextBase"
-                android:text="@string/consult_statistics"
-                android:textColor="@color/grey"
                 android:layout_gravity="left"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp" />
+                android:layout_marginLeft="20dp"
+                android:text="@string/operations"
+                android:textColor="@color/grey" />
+
+            <TextView
+                android:id="@+id/btn_get_boniatos"
+                style="@style/ButtonMes"
+                android:layout_marginTop="15dp"
+                android:text="@string/get_boniatos" />
+
+            <TextView
+                android:id="@+id/btn_new_payment"
+                style="@style/ButtonMes.Green"
+                android:layout_marginTop="15dp"
+                android:text="@string/send_payment" />
+
+            <View
+                style="@style/SeparatorHorizontal.White"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp" />
+
+            <TextView
+                style="@style/TextBase"
+                android:layout_gravity="left"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="@string/consult_statistics"
+                android:textColor="@color/grey" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -89,9 +177,9 @@
                     android:id="@+id/btn_graphics"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:background="@color/white"
                     android:padding="15dp">
 
                     <TextView
@@ -105,9 +193,9 @@
                     android:id="@+id/btn_movements"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:background="@color/white"
                     android:padding="15dp">
 
                     <TextView
@@ -117,30 +205,6 @@
 
                 <View style="@style/XpansorHoriz" />
             </LinearLayout>
-
-            <View style="@style/SeparatorHorizontal.White"
-                android:layout_marginBottom="15dp"
-                android:layout_marginTop="15dp" />
-
-            <TextView
-                style="@style/TextBase"
-                android:text="@string/operations"
-                android:textColor="@color/grey"
-                android:layout_gravity="left"
-                android:layout_marginLeft="20dp"
-                android:layout_marginBottom="10dp"/>
-
-            <TextView
-                android:id="@+id/btn_get_boniatos"
-                style="@style/ButtonMes"
-                android:text="@string/get_boniatos"
-                android:layout_marginTop="15dp"/>
-
-            <TextView
-                android:id="@+id/btn_new_payment"
-                style="@style/ButtonMes.Green"
-                android:text="@string/send_payment"
-                android:layout_marginTop="15dp"/>
 
 
         </LinearLayout>
