--- a/app/src/main/res/layout/view_header_menu.xml
+++ b/app/src/main/res/layout/view_header_menu.xml
@@ -2,37 +2,82 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@color/green_light"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp">
+    android:orientation="vertical"
+    android:paddingBottom="15dp"
+    android:paddingTop="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:padding="5dp">
 
         <ImageView
+            android:id="@+id/img_avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_avatar"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true"
+            android:src="@mipmap/ic_avatar" />
 
-        <TextView
-            android:id="@+id/btn_login"
-            android:text="@string/enter"
-            android:layout_marginLeft="10dp"
-            style="@style/ButtonMes"
-            android:minWidth="0dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp">
 
-        <TextView
-            android:id="@+id/btn_singup"
-            style="@style/ButtonMes"
-            android:text="@string/register"
-            android:layout_marginLeft="5dp"
-            android:minWidth="0dp"/>
+            <RelativeLayout
+                android:id="@+id/view_user_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/tv_user_name"
+                    style="@style/TextBase.Purple"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@id/btn_logout"
+                    android:textSize="22sp"
+                    android:text="adsfasdfasdfasfd"/>
+
+                <ImageView
+                    android:id="@+id/btn_logout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:adjustViewBounds="true"
+                    android:background="@drawable/background_pressed_common"
+                    android:src="@mipmap/ic_logout"
+                    android:padding="5dp"/>
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/view_enter_buttons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/btn_login"
+                    style="@style/ButtonMes"
+                    android:minWidth="0dp"
+                    android:padding="10dp"
+                    android:text="@string/enter" />
+
+                <TextView
+                    android:id="@+id/btn_singup"
+                    style="@style/ButtonMes"
+                    android:layout_marginLeft="15dp"
+                    android:minWidth="0dp"
+                    android:padding="10dp"
+                    android:text="@string/register" />
+            </LinearLayout>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
