--- a/app/src/main/res/values/styles_text.xml
+++ b/app/src/main/res/values/styles_text.xml
@@ -18,4 +18,10 @@
         <item name="android:textColor">@color/purple</item>
     </style>
 
+    <style name="EditTextAuth" parent="TextBase">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
 </resources>
